fixed errors and tried to make app natural on smaller screen

--- a/src/App.css
+++ b/src/App.css
@@ -8,18 +8,17 @@
 	/* Center the mobile container */
 	justify-content: center;
 	align-items: center;
-	background-color: #FFFFFF;
+	background-color: #F7F8F9;
 	/* Light background */
 }
 
 /* Mobile container - simulating a mobile screen */
 .mobile-container {
 	width: 320px;
-	/* Updated mobile width */
+	/* Mobile width */
 	height: 685px;
-	/* Typical mobile height */
-	background: #FFFFFF;
-	opacity: 1 !important;
+	/* Mobile height */
+	background-color: #F7F8F9;
 	border-radius: 3px;
 	/* Rounded corners for the screen effect */
 	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
@@ -47,18 +46,14 @@
 	}
 }
 
-/* Tablet and Mobile Styles */
+/* Remove container styling for tablet and mobile */
 @media screen and (max-width: 1024px) {
-	.main-container {
-		height: 100%;
-		align-items: flex-start;
-	}
-	
 	.mobile-container {
 		width: 100%;
 		height: 100vh;
 		border: none;
 		border-radius: 0;
 		box-shadow: none;
+		background-color: #FFFFFF;
 	}
 }
