--- a/src/pages/Welcome.css
+++ b/src/pages/Welcome.css
@@ -22,7 +22,6 @@
 	color: #1d2226 !important;
 	opacity: 1;
 	margin-bottom: 8px;
-	white-space: nowrap;
 }
 
 .welcome p {
@@ -79,39 +78,15 @@
 	.welcome {
 		width: 100%;
 		height: 100vh;
-		display: flex;
-		flex-direction: column;
+		justify-content: center;
 		align-items: center;
 		text-align: center;
-		padding: 0 20px;
+		padding: 20px;
 	}
 
 	.welcome h1,
 	.welcome p {
 		text-align: center;
-		width: 100%;
-		max-width: 320px;
-	}
-
-	.btn {
-		width: 100%;
-		max-width: 320px;
-	}
-}
-
-/* Portrait mode adjustments */
-@media screen and (max-width: 1024px) and (orientation: portrait) {
-	.welcome {
-		justify-content: center;
-		padding-bottom: 0;
-	}
-}
-
-/* Landscape mode adjustments */
-@media screen and (max-width: 1024px) and (orientation: landscape) {
-	.welcome {
-		justify-content: center;
-		padding-bottom: 0;
 	}
 }
 
@@ -119,13 +94,13 @@
 @media screen and (max-width: 480px) {
 	.welcome {
 		justify-content: flex-end;
+		align-items: flex-start;
 		padding: 16px;
 		padding-bottom: 200px;
 	}
 
 	.welcome h1,
-	.welcome p,
-	.btn {
+	.welcome p {
 		text-align: left;
 	}
 }
